# Dali

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  createdev.sh  deletedev.sh  merge.sh  run_clang_format.sh
.circleci/: config.yml
benchmark_gen/: .gitignore  CMakeLists.txt  makefile_old
benchmark_gen/src/: BG.cpp  circuit.cpp  circuit.hpp  circuit_io.cpp  circuit_random_gen.cpp  node_net.hpp
cmake/: FindCPLEX.cmake  FindGaloisEDA.cmake  FindGitCommitVersion.cmake  FindOpenMPPackage.cmake
dali/: circuit.h  dali.cc  dali.h  dali_scm.cc  dali_standalone.cc  debug-adaptec.cc  debug.cc  placer.h  solver.h  wellflow.cc
dali/application/: bookshelf2def.cc  (+18 more)
scripts/: createdev.sh  deletedev.sh  displacement.m  merge.sh  nodes_terminal_plot.m  placement_animation.m  plotter_cluster.m  plotter_displacement.m  plotter_patch.m  replace_boost_log_macro.sh
src/: CMakeLists.txt  HPCC.cc  HPCC.cpp  circuit.cpp  circuit.h  circuit.hpp  circuit_analytical_legalization_placer.cpp  circuit_bin.cpp  circuit_bin.hpp  circuit_conjugate_gradient.cpp  circuit_diffusion_limited_aggregation_placer.cpp  circuit_global_placer.cpp  circuit_io.cpp  circuit_look_ahead_legalization.cpp  circuit_node_net.cpp  circuit_node_net.hpp  circuitbin.cpp  circuitbin.hpp  circuitblock.cpp  circuitblock.hpp  circuitnet.cpp  circuitnet.hpp  circuitpin.cpp  circuitpin.hpp  dali.cc  debug-adaptec.cc  debug.cc  hpcc.cc  hpwl.cc  lefdef2bookshelf.cc  main.cc  old_code.cxx  opendb.cc  opendb.h  placer.cc  placer.cpp  placer.h  placer.hpp  placerconfig.cpp  placerconfig.hpp  (+4 more)
src/AL/: AvailSpace.cc  FreeSegment.cc  FreeSegment.h  TetrisSpace.cc  TetrisSpace.h  analyticallegalizationplacer.cpp  analyticallegalizationplacer.hpp  availspace.cc  availspace.h  blockal.cc  blockal.cpp  blockal.h  blockal.hpp  boxbin.h  cgsolver.cpp  cgsolver.hpp  freesegment.cc  freesegment.h  freesegmentlist.cc  freesegmentlist.h  grid_bin.cc  grid_bin.h  grid_bin_index.h  netal.cc  netal.cpp  netal.h  netal.hpp  placeral.cc  placeral.cpp  placeral.h  placeral.hpp  tetrisspace.cc  tetrisspace.h
src/DLA/: bindla.cpp  bindla.hpp  blockdla.cc  blockdla.cpp  blockdla.h  blockdla.hpp  diffusionlimitedaggregationplacer.cpp  diffusionlimitedaggregationplacer.hpp  dlabin.cpp  dlabin.hpp  netdla.cc  netdla.cpp  netdla.h  netdla.hpp  nodedla.cpp  nodedla.hpp  placerdla.cc  placerdla.cpp  placerdla.h  placerdla.hpp
src/Placer/: blocktype.cpp  blocktype.hpp
src/SA/: simulatedannealingplacer.cpp  simulatedannealingplacer.hpp
src/SP/: boxbin.cc  boxbin.h  cell_cut_point.cc  cell_cut_point.h  grid_bin_index.cc
src/circuit/: bin.cc  bin.cpp  bin.h  bin.hpp  blkpairnets.cc  blkpairnets.h  blktypecluster.cc  blktypecluster.h  block.cc  block.cpp  block.h  block.hpp  blockaux.cc  blockaux.h  blockpinpair.cc  blockpinpair.h  blocktype.cc  blocktype.cpp  blocktype.h  blocktype.hpp  blocktypeaux.cc  blocktypeaux.h  blocktypecluster.cc  blocktypecluster.h  blocktypewell.cc  blocktypewell.h  circuit.cc  circuit.cpp  circuit.h  circuit.hpp  circuitbin.cc  circuitbin.h  circuitbin.hpp  circuitblock.cc  circuitblock.cpp  circuitblock.h  circuitblock.hpp  circuitblocktype.cc  circuitblocktype.cpp  circuitblocktype.h  (+36 more)
src/common/: displaceviewer.h  global.h  logging.cc  logging.h  memory.cc  memory.h  misc.cc  misc.h  opendb.cc  opendb.h  optregdist.h  si2lefdef.cc  si2lefdef.h  timing.cc  timing.h
src/example_code/: 1create_circuit.cc
src/placer/: placer.cc  placer.h  placerbase.cc  placerbase.cpp  placerbase.h  placerbase.hpp
src/placer/detailedPlacer/: DPAbacus.cc  DPAbacus.h  DPAdam.cc  DPAdam.h  DPLinear.cc  DPLinear.h  DPSimAnneal.cc  DPSimAnneal.h  DPSwap.cc  DPSwap.h  MDPlacer.cc  MDPlacer.h
src/placer/detailedPlacer/DPLinear/: scaffoldnet.cc  scaffoldnet.h
src/placer/detailedPlacer/MDPlacer/: MDBlkAux.cc  MDBlkAux.h  bin.cc  bin.h  mdblkaux.cc  mdblkaux.h
src/placer/globalPlacer/: GPSimPL.cc  GPSimPL.h
src/placer/globalPlacer/GPSimPL/: boxbin.cc  boxbin.h  cellcutpoint.cc  cellcutpoint.h  gridbin.cc  gridbin.h  gridbinindex.cc  gridbinindex.h  simplblockaux.cc  simplblockaux.h  windowquadruple.h
src/placer/legalizer/: LGHillEx.cc  LGHillEx.h  LGTetris.cc  LGTetris.h  LGTetrisEx.cc  LGTetrisEx.h  pushpulllegalizer.cc  pushpulllegalizer.h
src/placer/legalizer/LGTetris/: freesegment.cc  freesegment.h  freesegmentlist.cc  freesegmentlist.h  tetrisspace.cc  tetrisspace.h
src/placer/legalizer/tetris/: freesegment.h  freesegmentlist.cc
src/placer/postLegalOptimizer/: PLOSlide.cc  PLOSlide.h
src/placer/postLegalOptimizer/PLOSlide/: ploslidenetaux.cc  ploslidenetaux.h
src/placer/wellLegalizer/: block_cluster.cc  block_cluster.h  clusterwelllegalizer.cc  clusterwelllegalizer.h  standardclusterwelllegalizer.cc  standardclusterwelllegalizer.h  stdclusterwelllegalizer.cc  stdclusterwelllegalizer.h  welllegalizer.cc  welllegalizer.h
src/placer/wellPlaceFlow/: wellplaceflow.cc  wellplaceflow.h
src/tetris/: freesegment.cc  freesegmentlist.cc  freesegmentlist.h  tetrisspace.cc
src/unused_code/: SimPL update sparse matrix.cpp
src/unused_code/AL/: blockal.hpp  netal.cpp  netal.hpp  placeral.cpp  placeral.hpp
src/unused_code/DLA/: blockdla.hpp  netdla.hpp  placerdla.cpp  placerdla.hpp
src/utility/: bookshelf2def.cc  custom2standard.cc  hpwl.cc  lefdef2bookshelf.cc
test/: batch_test.py  layout_plotter.py  memcheck.sh  plotter.m  plotter_cluster.m  plotter_displacement.m  plotter_patch.m  plotter_tsmc65.m
tests/application/: CMakeLists.txt  dali_command_line_test.cc  dali_config_test.cc
tests/boost_test/: CMakeLists.txt  misc_test.cc
tests/common/: CMakeLists.txt  logging_parallel_test.cc  placement_metrics_test.cc
tests/ioplacer/: .gitignore  CMakeLists.txt  README.md  add_and_place_io_pins.cc  all_iopin_use_same_metal_layer.cc  helper.cc  helper.h  metal.cc  metal_layer.cc
tests/placer/io_placer/: .gitignore  CMakeLists.txt  add_and_place_io_pins.cc  all_iopin_use_same_metal_layer.cc  helper.cc  prepare_benchmark.cmake
tests/unit/: CMakeLists.txt  logging_parallel_test.cc  misc_test.cc
(+264 files in other folders)
